--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "daisyui": "^5.1.29",
     "dayjs": "^1.11.18",
     "js-cookie": "^3.0.5",
     "react": "^19.1.1",
